test generated Spark SQL