@@ -10,6 +10,7 @@ lazy val root = (project in file("."))
 val slickVersion = "3.4.1"
 val slf4jVersion = "2.0.5"
 val scalaTestVersion = "3.2.17"
+val sparkVersion = "3.5.0"
 
 val dependencies = Seq(
   "com.typesafe.slick" %% "slick" % slickVersion,
@@ -18,7 +19,8 @@ val dependencies = Seq(
 )
 
 val testDependencies = Seq(
-  "org.scalatest" %% "scalatest" % scalaTestVersion
+  "org.scalatest" %% "scalatest" % scalaTestVersion,
+  "org.apache.spark" %% "spark-sql" % sparkVersion
 )
 
 libraryDependencies ++=
@@ -26,3 +28,22 @@ libraryDependencies ++=
   testDependencies.map(_ % Test)
 
 
+ThisBuild / Test / fork := true
+ThisBuild / Test / parallelExecution := false
+javaOptions ++= Seq(
+  "-Xms8G",
+  "-Xmx8G",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+  "--add-opens=java.base/java.io=ALL-UNNAMED",
+  "--add-opens=java.base/java.net=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+  "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+  "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+)
